// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TabBar snapshots renders with label and selected index 0 1`] = `
"View  Option1 │ Option2 │ Option3
────────────────────────────────────────────────────────────"
`;

exports[`TabBar snapshots renders without label 1`] = `
" Option1 │ Option2 │ Option3
────────────────────────────────────────────────────────────"
`;

exports[`TabBar snapshots renders unfocused 1`] = `
"View  Option1 │ Option2
────────────────────────────────────────────────────────────"
`;

exports[`TabBar snapshots renders with empty options 1`] = `
"View
────────────────────────────────────────"
`;
